# wine-mingw-linux-cpp

./: .gitignore  CMakeLists.txt  README.md  toolchain-mingw64.cmake
src/: main.cpp
test/: CMakeLists.txt  unit_test.cpp
